# Diffcontext

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  LICENSE  README.md  README_FULL.md  USAGE.md  app.py  attribute_ownership.py  attribute_ownership_fix.py  attribute_ownership_old.py  benchmark_results.json  benchmark_runner.py  blast_radius.py  change_context_compiler.py  compile_context.py  context_builder.py  context_selector.py  custom_benchmark_suite.json  demo.sh  demos.sh  dependency_expander.py  dependency_expander_fix.py  dependency_graph.py  diff.py  enhanced_dependency_graph.py  eval_real_repos.py  eval_real_repos_v2.py  eval_results.json  evaluate.py  extractor.py  extreme_tests.py  fix_pytest_analysis.py  graph_diff.py  ground_truth_celery.csv  ground_truth_django.csv  ground_truth_fastapi.csv  (+24 more)
.github/workflows/: publish.yml  test.yml
benchmarks/: BENCHMARK_RESULTS.md  EVAL_V2_REPORT.md  RIGOR_REPORT_2026-07.md  __init__.py  baselines.py  benchmark_runner.py  blend_loro.py  budget_head2head.py  calibration_at_scale.py  check_regression.py  diagnose_graph_gaps.py  eval_v1.py  eval_v2_hardened.py  evaluator.py  ground_truth.py  gt_validity.py  retrieval_head2head.py  significance.py
benchmarks/datasets/medium_repo/: api.py  expected.json  services.py  utils.py
benchmarks/datasets/simple_repo/: app.py  expected.json
benchmarks/datasets/torture_repo/: app.py  base.py  chain.py  commands.py  expected_edges.json  helpers.py  routing.py
benchmarks/datasets/torture_repo/legacy/: old_router.py
benchmarks/downstream/: EXECUTION_PLAN.md  README.md  __init__.py  providers.py  run_eval.py  tasks.py
benchmarks/downstream/tasks/: click.json  flask.json  httpx.json  requests.json  rich.json  starlette.json
benchmarks/results/calibration/: calibration_at_scale_python.json  calibration_at_scale_ts.json
benchmarks/results/eval_v2/: all_summaries.json  click_cases.csv  click_summary.json  django_cases.csv  django_summary.json  failure_buckets_django.json  flask_cases.csv  flask_summary.json  httpx_cases.csv  httpx_summary.json  pydantic_cases.csv  pydantic_summary.json
benchmarks/results/gt_validity/: gt_validity.json
benchmarks/results/loro/: loro_3leg.json  loro_dense.json
diffcontext/: __init__.py  _warn_once.py  cache.py  graph_builder.py  history.py  lexical.py  models.py  parser.py  pipeline.py  resolver.py  scanner.py  symbols.py
diffcontext-service/: README.md
diffcontext-service/backend/: main.py
diffcontext-service/frontend/: index.html
diffcontext/cli/: __init__.py
diffcontext/context/: __init__.py  compiler.py  selector.py
diffcontext/diff/: __init__.py  git_diff.py  state_manager.py
diffcontext/impact/: __init__.py  blast_radius.py  scoring.py  traversal.py  visualizer.py
diffcontext/languages/: __init__.py  typescript.py
diffcontext/verify/: __init__.py  cases.py  history.py  sufficiency.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  IMPLEMENTER_PROMPT.md  LANG_ADAPTERS.md  PLAN.md  RESEARCH.md  ROADMAP.md  ROADMAP_STATEFUL_HARNESS.md  USE_CASES.md  VERIFY.md  WRITING_TESTS_FOR_JUNIORS.md  medium-article.md
evaluation/: calculate_real_metrics.py  compare_precision.py  final_validation.py  measure_real_recall.py  relevance_scorer.py
examples/: app_v1.py  app_v2.py  blast_radius.txt  compiled_context.txt  dependency_graph.txt  impact_report.txt
experimental/: compile_context.py  hash_utils.py  impact_report.py  impact_scorer.py  multi-file-dependency-graph.py  repo_extractor.py  repo_scanner.py
outputs/: repo_tree.txt  token_stats.md
research/validation/: complete_benchmark.py  genuine_validation.py  ground_truth_annotator.py  human_eval_prep.py
scripts/: clone_real_repos.sh  final_validation.sh  install_pycgbench.sh  run_complete_analysis.sh  run_enhanced_on_all.sh  run_fixed_analysis.sh
test_django/django/db/models/: query.py
test_django/django/db/models/sql/: query.py
tests/: test_cache.py  test_compiler_meta.py  test_core.py  test_cutoff.py  test_determinism.py  test_git_diff.py  test_harness_api.py  test_history.py  test_incremental.py  test_lexical.py  test_precision.py  test_service_clone.py  test_src_layout.py  test_token_budget.py  test_typescript_adapter.py  test_verify.py
tests/fixtures/medium_repo/: models.py  service.py  validators.py
tests/fixtures/simple_repo/: main.py
tests/fixtures/src_layout_repo/src/mypkg/: __init__.py  core.py  helpers.py
tests/fixtures/src_layout_repo/src/myservice/: app.py  consumer.py
website/: .gitignore  middleware.js  next.config.mjs  package-lock.json  package.json
website/app/: layout.jsx
website/app/docs/[[...mdxPath]]/: page.jsx
website/components/: BenchmarkChart.jsx  Hero.jsx  Metrics.jsx  Pipeline.jsx
website/content/: _meta.js  architecture.mdx  benchmarks.mdx  contributing.mdx  index.mdx  language-support.mdx  quick-start.mdx  usage.mdx  verify.mdx
website/patches/: nextra-theme-docs+4.6.1.patch
