[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffcontext"
dynamic = ["version"]
description = "Static-analysis-powered repository context compiler for LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Trakshan Mishra", email = "trakshanmishra477@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]


[project.scripts]
diffcontext = "diffcontext.cli:cli_main"


[tool.setuptools.packages.find]
include = ["diffcontext*"]
exclude = ["diffcontext-service*"]

[tool.setuptools.dynamic]
version = { attr = "diffcontext.__version__" }

[tool.setuptools.package-data]
diffcontext = ["py.typed"]